<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDDFE">

    <FrameLayout
        android:id="@+id/containerEmptyState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_gravity="center"
            android:src="@drawable/empty2"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_in_group"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#9D9BFE"
        app:layout_constraintBottom_toTopOf="@+id/compo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:padding="16sp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_save"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:padding="16sp"
            android:src="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonAdd"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/image_back"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/nunito_bold"
            android:text="   +  New Student      "
            android:textAllCaps="false"
            android:textColor="#032068"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.905"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/compo"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_in_group"
        tools:layout_editor_absoluteY="92dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/full_name"
            android:textColor="#040525"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/right"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/ic_right"
                    app:tint="#040525"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/time_period"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:text="@string/time_period"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/left"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/ic_left"
                    app:tint="#040525"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    tools:ignore="ContentDescription" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:rotation="90"
                    android:text="@string/mon"
                    android:textColor="#040525"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:rotation="90"
                    android:text="@string/tue"
                    android:textColor="#040525"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:rotation="90"
                    android:text="@string/wed"
                    android:textColor="#040525"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:rotation="90"
                    android:text="@string/thu"
                    android:textColor="#040525"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:rotation="90"
                    android:text="@string/fri"
                    android:textColor="#040525"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:rotation="90"
                    android:text="@string/sat"
                    android:textColor="#040525"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:rotation="90"
                    android:text="@string/sun"
                    android:textColor="#040525"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/compo"
        tools:listitem="@layout/item_attendance" />

</androidx.constraintlayout.widget.ConstraintLayout>


