<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDDFE"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#9D9BFE"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:padding="16sp"
            android:src="@drawable/ic_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="Add student"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeErrorColor="#FF0000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_student_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/first_name"
            android:inputType="text"
            android:maxLength="15" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:boxStrokeErrorColor="#FF0000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_student_lName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLength="15" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:boxStrokeErrorColor="#FF0000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_student_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16sp"
        android:backgroundTint="#9D9BFE"
        android:fontFamily="@font/nunito_bold"
        android:text="Save"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />


</androidx.constraintlayout.widget.ConstraintLayout>